kubernetes-files/backend/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: three-tier-app
  labels:
    app: flask

spec:
  selector:
    app: flask

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000

  type: ClusterIP
